--- a/searxng/docker-compose.yml
+++ b/searxng/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./searxng:/etc/searxng:rw
+      - searxng-data:/var/cache/searxng:rw
     environment:
       - SEARXNG_BASE_URL=https://savitri.troodon-godzilla.ts.net/
       - UWSGI_WORKERS=4
@@ -63,3 +64,4 @@ services:
 
 volumes:
   valkey-data2:
+  searxng-data:
